--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "amqplib": "^0.10.4",
     "concurrently": "^8.2.2",
     "connect-redis": "^7.1.1",
+    "cookie-parser": "^1.4.6",
+    "csrf-csrf": "^3.0.6",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
     "express-validator": "^7.1.0",
